--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
   </head>
   <body>
     <div class="container">
-      <img class="title-image" src="pics/title.png" alt="Title Image" />
+      <img
+        class="title-image"
+        src="pixelpics/title_final_lab-run01.png"
+        alt="Title Image"
+      />
       <div class="game-board" id="gameBoard"></div>
 
       <div class="hero-lives">
-        <img  id="life1" src="pics/life.png" alt="Life Icon" />
-        <img  id="life2" src="pics/life.png" alt="Life Icon" />
-        <img  id="life3" src="pics/life.png" alt="Life Icon" />
+        <img id="life1" src="pixelpics/life_hero.png" alt="Life Icon" />
+        <img id="life2" src="pixelpics/life_hero.png" alt="Life Icon" />
+        <img id="life3" src="pixelpics/life_hero.png" alt="Life Icon" />
       </div>
-
     </div>
 
     <script src="script.js"></script>
