iteration : enemy defeated counter, different enemystyles, enemy1+2 is not moving

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Labyrinth Game</title>
     <link rel="stylesheet" href="style.css" />
+    <style>@import url('https://fonts.googleapis.com/css2?family=Fasthand&display=swap');</style>
   </head>
   <body>
     <div class="container">
@@ -12,11 +13,18 @@
         alt="Title Image"
       />
       <div class="game-board" id="gameBoard"></div>
-
+<div div class="container2">
       <div class="hero-lives">
         <img id="life1" src="pixelpics/life_hero.png" alt="Life Icon" />
         <img id="life2" src="pixelpics/life_hero.png" alt="Life Icon" />
         <img id="life3" src="pixelpics/life_hero.png" alt="Life Icon" />
+      </div>
+      
+
+      <div class="enemy-defeat">
+        <img id="enemydeath" src="pixelpics/enemys_killed.png" alt="Death Enemies Icon"/>
+        <div id="enemydeathcounter" alt="Death Counter Enemies">1</div>
+      </div>
       </div>
     </div>
 
