--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 
       <div id="smashbutton">
-        <button><img src="pixelpics/mobile_smashbutton.png" class="game-button"/></button>
+        <button><img src="pixelpics/mobile_smashbutton.png" class="game-button" id="smash-button"/></button>
       </div>
     
     </div>
